@@ -551,17 +551,22 @@ static void log_message(char* format, ...)
 	va_end(vl);
 }
 
+enum ChunkedDataBitFlags {
+	CHDT_NO_FLAGS = 0,
+	CHDT_SET_FILENAME = 1,
+	CHDT_REPEAT_SMALL_CHUNK = 2
+};
+
 /**
- * Calculate hash of the message specified by chunk string, repeated until
- * the given length is reached.
+ * Calculate message digest of the data by chunks of the specified size.
  *
  * @param hash_id id of the hash algorithm to use
- * @param msg_chunk the message chunk as a null-terminated string
- * @param chunk_size the size of the chunk in bytes
- * @param count the number of chunks in the message
- * @param set_filename boolean flag: set a filename for the BTIH hash
+ * @param data the data to hash
+ * @param chunk_size the size of a chunk
+ * @param total_size the total size of the data to be hashed
+ * @param flags bit flags to control the hashing process
  */
-static char* repeat_hash(unsigned hash_id, const char* chunk, size_t chunk_size, size_t msg_size, int set_filename)
+static char* hash_data_by_chunks(unsigned hash_id, const char* data, size_t chunk_size, size_t total_size, unsigned flags)
 {
 	struct rhash_context* ctx;
 	size_t left, size;
@@ -570,13 +575,22 @@ static char* repeat_hash(unsigned hash_id, const char* chunk, size_t chunk_size,
 
 	ctx = rhash_init(hash_id);
 
-	if ((hash_id & RHASH_BTIH) && set_filename) {
-		rhash_torrent_add_file(ctx, "test.txt", (unsigned long long)msg_size);
+	if ((hash_id & RHASH_BTIH) && (flags & CHDT_SET_FILENAME)) {
+		rhash_torrent_add_file(ctx, "test.txt", (unsigned long long)total_size);
 	}
-
-	for (left = msg_size; left > 0; left -= size) {
-		size = (left > chunk_size ? chunk_size : left);
-		rhash_update(ctx, (const unsigned char*)chunk, size);
+	if (!!(flags & CHDT_REPEAT_SMALL_CHUNK)) {
+		/* repeat the small chunk of data until the total_size is reached */
+		for (left = total_size; left > 0; left -= size) {
+			size = (left > chunk_size ? chunk_size : left);
+			rhash_update(ctx, (const unsigned char*)data, size);
+		}
+	} else {
+		/* split the long data buffer and hash it by small chunks */
+		size_t index;
+		for (index = 0, left = total_size; left > 0; index += size, left -= size) {
+			size = (left > chunk_size ? chunk_size : left);
+			rhash_update(ctx, (const unsigned char*)data + index, size);
+		}
 	}
 	rhash_final(ctx, 0);
 	rhash_print(out, ctx, hash_id, RHPR_UPPERCASE);
@@ -590,35 +604,49 @@ static char* repeat_hash(unsigned hash_id, const char* chunk, size_t chunk_size,
  * Report error if calculated hash differs from the expected value.
  *
  * @param hash_id id of the algorithm to test
- * @param msg_chunk the message chunk as a null-terminated string
+ * @param data the data to hash
  * @param chunk_size the size of the chunk in bytes
- * @param count the number of chunks in the message
+ * @param total_size the total size of the data to be hashed
  * @param hash the expected hash value
- * @param set_filename need to set a filename for BTIH hash
+ * @param flags bit flags to control the hashing process
  */
-static void assert_hash_long_msg(unsigned hash_id, const char* msg_chunk, size_t chunk_size, size_t msg_size, const char* hash, const char* msg_name, int set_filename)
+static void assert_hash_long_msg(unsigned hash_id, const char* data, size_t chunk_size, size_t total_size, const char* hash, const char* msg_name, unsigned flags)
 {
 	char* result;
-	result = repeat_hash(hash_id, msg_chunk, chunk_size, msg_size, set_filename);
+	result = hash_data_by_chunks(hash_id, data, chunk_size, total_size, flags);
 	if (strcmp(result, hash) != 0) {
 		const char* hash_name = rhash_get_name(hash_id); /* the hash function name */
-		if (msg_name) log_message("failed: %s(%s) = %s, expected %s\n", hash_name, msg_name, result, hash);
-		else log_message("failed: %s(\"%s\") = %s, expected %s\n", hash_name, msg_chunk, result, hash);
+		if (msg_name)
+			log_message("failed: %s(%s) = %s, expected %s\n", hash_name, msg_name, result, hash);
+		else
+			log_message("failed: %s(\"%s\") = %s, expected %s\n", hash_name, data, result, hash);
 		g_errors++;
 	}
 }
 
 /**
- * Calculate hash of the given message.
+ * Calculate message digest for the data of given size.
  *
  * @param hash_id id of the hash algorithm to use
- * @param msg the message to hash
- * @param set_filename need to set a filename for BTIH hash
+ * @param data the data to hash
+ * @param data_size the size of the data
+ * @param flags bit flags to control the hashing process
  */
-static char* hash_message(unsigned hash_id, const char* msg, int set_filename)
+static char* hash_data(unsigned hash_id, const char* data, size_t data_size, unsigned flags)
 {
-	size_t msg_size = strlen(msg);
-	return repeat_hash(hash_id, msg, msg_size, msg_size, set_filename);
+	return hash_data_by_chunks(hash_id, data, data_size, data_size, flags);
+}
+
+/**
+ * Calculate message digest of the given message.
+ *
+ * @param hash_id id of the hash algorithm to use
+ * @param str the message to hash
+ * @param flags bit flags to control the hashing process
+ */
+static char* hash_message(unsigned hash_id, const char* str, unsigned flags)
+{
+	return hash_data(hash_id, str, strlen(str), flags);
 }
 
 /**
@@ -626,14 +654,14 @@ static char* hash_message(unsigned hash_id, const char* msg, int set_filename)
  * against the expected one. Report error on fail.
  *
  * @param hash_id id of the algorithm to test
- * @param message the message to hash
+ * @param str the message to hash
  * @param expected_hash the expected hash value
- * @param set_filename need to set a filename for BTIH hash
+ * @param flags bit flags to control the hashing process
  */
-static void assert_hash(unsigned hash_id, const char* msg, const char* expected_hash, int set_filename)
+static void assert_hash(unsigned hash_id, const char* str, const char* expected_hash, unsigned flags)
 {
-	size_t msg_size = strlen(msg);
-	assert_hash_long_msg(hash_id, msg, msg_size, msg_size, expected_hash, NULL, set_filename);
+	size_t length = strlen(str);
+	assert_hash_long_msg(hash_id, str, length, length, expected_hash, NULL, flags);
 }
 
 /**
@@ -644,16 +672,18 @@ static void assert_hash(unsigned hash_id, const char* msg, const char* expected_
  * @param ch the character the message is filled with
  * @param msg_size the size of message in bytes
  * @param expected_hash the expected hash value
- * @param set_filename need to set a filename for BTIH hash
+ * @param flags bit flags to control the hashing process
  */
-static void assert_rep_hash(unsigned hash_id, char ch, size_t msg_size, const char* hash, int set_filename)
+static void assert_rep_hash(unsigned hash_id, char ch, size_t msg_size, const char* hash, unsigned flags)
 {
 	char ALIGN_ATTR(64) msg_chunk[8192]; /* 8 KiB */
 	char msg_name[20];
 	memset(msg_chunk, ch, 8192);
-	if (ch >= 32) sprintf(msg_name, "\"%c\"x%d", ch, (int)msg_size);
-	else sprintf(msg_name, "\"\\%o\"x%d", (unsigned)(unsigned char)ch, (int)msg_size);
-	assert_hash_long_msg(hash_id, msg_chunk, 8192, msg_size, hash, msg_name, set_filename);
+	if (ch >= 32)
+		sprintf(msg_name, "\"%c\"x%d", ch, (int)msg_size);
+	else
+		sprintf(msg_name, "\"\\%o\"x%d", (unsigned)(unsigned char)ch, (int)msg_size);
+	assert_hash_long_msg(hash_id, msg_chunk, 8192, msg_size, hash, msg_name, flags | CHDT_REPEAT_SMALL_CHUNK);
 }
 
 /*=========================================================================*
@@ -665,12 +695,12 @@ static void assert_rep_hash(unsigned hash_id, char ch, size_t msg_size, const ch
  *
  * @param hash_id id of the algorithm to test
  * @param ptr pointer to array of pairs <message,expected-hash>
- * @param set_filename need to set a filename for BTIH hash
+ * @param flags bit flags to control the hashing process
  */
-static void test_known_strings_pairs(unsigned hash_id, const char** ptr, int set_filename)
+static void test_known_strings_pairs(unsigned hash_id, const char** ptr, unsigned flags)
 {
 	for (; ptr[0] && ptr[1]; ptr += 2) {
-		assert_hash(hash_id, ptr[0], ptr[1], set_filename);
+		assert_hash(hash_id, ptr[0], ptr[1], flags);
 	}
 }
 
@@ -684,8 +714,8 @@ static void test_known_strings(unsigned hash_id)
 	int i;
 	for (i = 0; short_test_vectors[i].tests != 0; i++) {
 		if (hash_id == short_test_vectors[i].hash_id) {
-			int set_filename = (short_test_vectors[i].tests == btih_with_filename_tests);
-			test_known_strings_pairs(hash_id, short_test_vectors[i].tests, set_filename);
+			unsigned flags = (short_test_vectors[i].tests == btih_with_filename_tests ? CHDT_SET_FILENAME : CHDT_NO_FLAGS);
+			test_known_strings_pairs(hash_id, short_test_vectors[i].tests, flags);
 			break;
 		}
 	}
@@ -698,8 +728,8 @@ static void test_all_known_strings(void)
 {
 	int i;
 	for (i = 0; short_test_vectors[i].tests != 0; i++) {
-		int set_filename = (short_test_vectors[i].tests == btih_with_filename_tests);
-		test_known_strings_pairs(short_test_vectors[i].hash_id, short_test_vectors[i].tests, set_filename);
+		unsigned flags = (short_test_vectors[i].tests == btih_with_filename_tests ? CHDT_SET_FILENAME : CHDT_NO_FLAGS);
+		test_known_strings_pairs(short_test_vectors[i].hash_id, short_test_vectors[i].tests, flags);
 	}
 }
 
@@ -759,8 +789,8 @@ static void test_long_strings(void)
 
 	/* test all algorithms on 1,000,000 characters of 'a' */
 	for (count = 0; count < (sizeof(tests) / sizeof(id_to_hash_t)); count++) {
-		int set_filename = (tests[count].hash_id == RHASH_BTIH);
-		assert_rep_hash(tests[count].hash_id, 'a', 1000000, tests[count].expected_hash, set_filename);
+		unsigned flags = (tests[count].hash_id == RHASH_BTIH ? CHDT_SET_FILENAME : CHDT_NO_FLAGS);
+		assert_rep_hash(tests[count].hash_id, 'a', 1000000, tests[count].expected_hash, flags);
 	}
 
 	/* BTIH calculated without a filename. The hash value can't be verified by torrent tools */
@@ -827,10 +857,11 @@ static void test_results_consistency(void)
  */
 static void test_unaligned_messages_consistency(void)
 {
-	int i, start, hash_id, alignment_size;
+	int start, alignment_size;
+	unsigned hash_id;
 
-	/* loop by sums */
-	for (i = 0, hash_id = 1; (hash_id & RHASH_ALL_HASHES); hash_id <<= 1, i++) {
+	/* loop by hash algorithms */
+	for (hash_id = 1; (hash_id & RHASH_ALL_HASHES); hash_id <<= 1) {
 		char expected_hash[130];
 		assert(rhash_get_digest_size(hash_id) < (int)sizeof(expected_hash));
 
@@ -841,17 +872,40 @@ static void test_unaligned_messages_consistency(void)
 			char message[30];
 			int j, msg_length = 11 + alignment_size;
 
-			/* fill the buffer fifth shifted letter sequence */
-			for (j = 0; j < msg_length; j++) message[start + j] = 'a' + j;
+			/* fill the buffer with the shifted letter sequence */
+			for (j = 0; j < msg_length; j++)
+				message[start + j] = 'a' + j;
 			message[start + j] = 0;
 
 			if (start == 0) {
-				/* save original hash value */
-				strcpy(expected_hash, hash_message(hash_id, message + start, 0));
+				strcpy(expected_hash, hash_message(hash_id, message + start, 0)); /* save hash value */
 			} else {
-				/* verify obtained hash value */
-				assert_hash(hash_id, message + start, expected_hash, 0);
+				assert_hash(hash_id, message + start, expected_hash, 0); /* verify hash value */
 			}
+		}
+	}
+}
+
+/**
+ * Test that a message digest of a data block is independent on a chunk size.
+ */
+static void test_chunk_size_consistency(void)
+{
+	char buffer[8192];
+	unsigned hash_id;
+	size_t i;
+	for (i = 0; i < sizeof(buffer); i++)
+		buffer[i] = (char)(unsigned char)(i % 255);
+
+	/* loop by hash algorithms */
+	for (hash_id = 1; (hash_id & RHASH_ALL_HASHES); hash_id <<= 1) {
+		char expected_hash[130];
+		strcpy(expected_hash, hash_data(hash_id, buffer, sizeof(buffer), 0)); /* save hash value */
+		for (i = 0; i < 2; i++) {
+			int chunk_size = (i == 0 ? 512 : 3);
+			char msg_name[40];
+			sprintf(msg_name, "8k buffer by chunks of %d bytes", chunk_size);
+			assert_hash_long_msg(hash_id, buffer, chunk_size, sizeof(buffer), expected_hash, msg_name, CHDT_NO_FLAGS);
 		}
 	}
 }
@@ -883,7 +937,7 @@ static void test_version_sanity(void)
  */
 static void test_generic_assumptions(void)
 {
-	unsigned mask = (1 << RHASH_HASH_COUNT) - 1;
+	unsigned mask = (1u << RHASH_HASH_COUNT) - 1u;
 	if (mask != RHASH_ALL_HASHES) {
 		log_message("error: wrong algorithms count %d for the mask 0x%x\n", RHASH_HASH_COUNT, RHASH_ALL_HASHES);
 		g_errors++;
@@ -1035,6 +1089,7 @@ int main(int argc, char* argv[])
 		test_long_strings();
 		test_results_consistency();
 		test_unaligned_messages_consistency();
+		test_chunk_size_consistency();
 		test_magnet();
 		if (g_errors == 0)
 			printf("All sums are working properly!\n");
